@@ -13,3 +13,4 @@ Other contributors:
   Daniel Evison
   Frank Grimm
   Gary Passero
+  Michael Grundberg <mgrundberg@users.sourceforge.net>
